# ifm3d-ros

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  ChangeLog.md  Dockerfile  Dockerfile_buildstage_only  Dockerfile_staged  README.md  Release_notes.md  build_amd64.sh  build_arm64.sh  build_container.sh  docker-compose.yml  docker_ros_launch.sh  index.md  package.xml  run_ros_docker.sh  run_rviz.sh
config/: rviz_config.rviz
doc/: building.md  changing_temporary_parameters.md  dump_and_config.md  indigo.md  kinetic.md  melodic.md  noetic.md  rpc_error_codes.md  troubleshooting.md  visualization.md
docker/: Dockerfile  Dockerfile_buildstage_only  README_VPU_docker_compose_setup.md  build.sh  build_container.sh  docker-compose_IPC.yml  docker-compose_VPU.yml  docker-compose_docker_network.yml  four_cameras.launch  hosts_IPC  hosts_ros_master  ros-entrypoint.sh
docker/melodic/amd64/: Dockerfile  build.sh  ros-entrypoint.sh
docker/melodic/arm64/: Dockerfile  build.sh
docker/noetic/amd64/: Dockerfile  build.sh
docker/noetic/arm64/: Dockerfile  build.sh
docker/noetic/arm64/test/: Dockerfile_slim  README.md  install_rosdep.sh  requirements.txt  rosdeps_ifm3d.txt
examples/: README_pointcloud_merge.md
ifm3d-ros/: CMakeLists.txt  package.xml
ifm3d_ros_driver/: CMakeLists.txt  README.md  nodelets.xml  package.xml  setup.py
ifm3d_ros_driver/doc/: building.md  diagnosis_link.md  distributed_build.md  dump_and_config.md  logging.md  noetic.md  rpc_error_codes.md  troubleshooting.md  visualization.md
ifm3d_ros_driver/include/ifm3d_ros_driver/: camera_nodelet.h
ifm3d_ros_driver/launch/: camera.launch  camera_2d.launch  camera_3d.launch  nodelet.launch
ifm3d_ros_driver/pylib/ifm3d/: _ConfigClient.py
ifm3d_ros_driver/src/: camera_nodelet.cpp
ifm3d_ros_driver/test/: ifm3d.test  test_camera.py  test_threshold.py
ifm3d_ros_examples/: CMakeLists.txt  README.md  package.xml
ifm3d_ros_examples/config/: rviz_config.rviz
ifm3d_ros_examples/examples/: README_pointcloud_merge.md  dump.json
ifm3d_ros_examples/launch/: camera.launch  camera_2d.launch  dump_merge_pc.json  four_cameras.launch  head.launch  merge_pc.launch  nodelet.launch  rviz.launch  six_cameras.launch
ifm3d_ros_msgs/: CMakeLists.txt  README.md  package.xml  setup.py
ifm3d_ros_msgs/msg/: Extrinsics.msg
ifm3d_ros_msgs/srv/: Config.srv  Dump.srv  SyncClocks.srv
ifm3d_ros_msgs/utils/ifm3d_ros_utils/: _ConfigClient.py  _DumpClient.py
include/ifm3d/: camera_nodelet.h
launch/: camera.launch  config.launch  four_cameras.launch  head.launch  ifm3d.rviz  merge_pc.launch  multi_camera.launch  nodelet.launch  rviz.launch  six_cameras.launch
msg/: Extrinsics.msg  SetChannel.msg  SetExposureTime.msg  SetExposureTimes.msg
pylib/ifm3d/: _ConfigClient.py  _DumpClient.py  __init__.py
src/: camera_nodelet.cpp  ifm3d_config_node.cpp  ifm3d_node.cpp
srv/: Trigger.srv
test/: test_camera.py
