<?xml version="1.0"?>
<package format="2">

  <name>ifm3d</name>
  <version>0.6.2</version>
  <description>ifm pmd-based 3D ToF Camera ROS package</description>
  <maintainer email="sean.kelly@ifm.com">Sean Kelly</maintainer>
  <license>Apache 2</license>
  <author email="tom@boxrobotics.ai">Tom Panzarella</author>

  <url type="repository">https://github.com/lovepark/ifm3d-ros</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <depend>ifm3d_core</depend>
  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>message_generation</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
