<?xml version="1.0"?>
<package format="2">

  <name>ifm3d_ros_driver</name>
  <version>1.0.2</version>
  <description>ifm 3D ToF Camera ROS main driver package</description>
  <maintainer email="support.robotics@ifm.com">ifm CSR group</maintainer>
  <license>Apache 2</license>
  <author email="Philipp.Senger@ifm.com">CSR ifm sytron</author>
  <url type="repository">https://github.com/ifm/ifm3d-ros/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rostest</build_depend>

  <depend>rospy</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ifm3d_ros_msgs</depend>

  <test_depend>cv_bridge</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
