<?xml version="1.0"?>
<package format="2">

  <name>ifm3d_ros_examples</name>
  <version>0.2.0</version>
  <description>ifm3d_ros examples subpackage</description>
  <maintainer email="support.robotics@ifm.com">ifm CSR group</maintainer>
  <license>Apache 2</license>
  <author email="Philipp.Senger@ifm.com">CSR ifm sytron</author>

  <url type="repository">https://github.com/ifm/ifm3d_ros/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tf</depend>
  <depend>ifm3d_ros_driver</depend>
  <depend>ifm3d_ros_msgs</depend>


  <export>
  </export>
</package>
