<?xml version="1.0"?>
<package format="2">

  <name>ifm3d_ros_msgs</name>
  <version>0.2.0</version>
  <description>ifm3d_ros messages subpackage</description>
  <maintainer email="support.robotics@ifm.com">ifm robotics group</maintainer>
  <license>Apache 2</license>
  <author email="support.robotics@ifm.com">ifm robotics group</author>
  <url type="repository">https://github.com/ifm/ifm3d-ros/</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>
    <architecture_independent/>
  </export>
</package>
